<resources>
    <string name="app_name">My Medicine</string>

    <string name="skip">SKIP</string>

    <string name="registration">Registration</string>
    <string name="medicine_details">Medicine Details</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">Username</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_cpassword">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">forgot password?</string>
    <string name="home">Home</string>
    <string name="search_hint">Search...</string>
    <string name="no_medicines_found">No medicines found</string>
    <string name="three_tablets_a_day">3 tablets a day</string>
    <string name="dummy_time">05:20 PM</string>
    <string name="medicine_taken">Taken</string>
    <string name="medicine_skip">Skip</string>

    <string name="add_medicine">Add Medicine</string>
    <string name="medication_name">Medication Name</string>
    <string name="DOSAGE">DOSAGE</string>
    <string name="dosage">Dosage</string>
    <string name="dosage_type">Dosage Type (Ex:Injection Or Tablet)</string>
    <string name="unit">Unit</string>
    <string name="SCHEDULE">SCHEDULE</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="frequency">Frequency</string>
    <string name="how_many_times_a_day">HOW MANY TIMES A DAY?</string>
    <string name="what_time">WHAT TIME?</string>
    <string name="which_days">WHICH DAYS?</string>
    <string name="done">DONE</string>
    <string name="REMINDER">REMINDER</string>
    <string name="total_taken">Total Taken</string>
    <string name="total_skipped">Total Skipped</string>
    <string name="Unit_optional">Unit (optional)</string>
    <string name="Pills">Pills</string>
    <string name="cc">cc</string>
    <string name="ml">ml</string>
    <string name="gr">gr</string>
    <string name="mg">mg</string>
    <string name="Drops">Drops</string>
    <string name="Pieces">Pieces</string>
    <string name="Puffs">Puffs</string>
    <string name="Units">Units</string>
    <string name="teaspoon">teaspoon</string>
    <string name="tablespoon">tablespoon</string>
    <string name="patch">patch</string>
    <string name="mcg">mcg</string>
    <string name="iu">iu</string>
    <string name="meq">meq</string>
    <string name="Carton">Carton</string>
    <string name="Spray">Spray</string>

    <string name="as_needed">As Needed</string>
    <string name="every_day">Every Day</string>
    <string name="specific_days">Specific Days</string>
    <string name="days_interval">Days Interval</string>
    <string name="birth_control_cycle">Birth Control Cycle</string>

    <string name="one_times_a_day">Once a day</string>
    <string name="two_times_a_day">Twice a day</string>
    <string name="three_times_a_day">3 times a day</string>
    <string name="four_times_a_day">4 times a day</string>
    <string name="five_times_a_day">5 times a day</string>
    <string name="six_times_a_day">6 times a day</string>
    <string name="seven_times_a_day">7 times a day</string>
    <string name="eight_times_a_day">8 times a day</string>
    <string name="nine_times_a_day">9 times a day</string>
    <string name="ten_times_a_day">10 times a day</string>
    <string name="eleven_times_a_day">11 times a day</string>
    <string name="twelve_times_a_day">12 times a day</string>
    <string name="twentyfour_times_a_day">24 times a day</string>

    <string-array name="attachment">
        <item>@string/camera</item>
        <item>@string/gallery</item>
    </string-array>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>


    <string name="please_provide_medicine_name">Please provide medicine name</string>
    <string name="please_provide_dosage">Please provide dosage</string>
    <string name="please_provide_dosage_type">Please provide dosage type</string>
    <string name="please_select_frequency">Please select frequency</string>
    <string name="please_select_start_date">Please select start date</string>
    <string name="please_select_end_date">Please select end date</string>
    <string name="please_select_how_many_times">Please select how many times</string>
    <string name="please_select_a_day">Please select a day</string>
    <string name="please_specify_all_time_slot">Please specify all time slot</string>
    <string name="medicine_saved">Medicine saved</string>
    <string name="medicine_not_saved">Medicine not saved</string>

    <string name="please_provide_name">Please provide name</string>
    <string name="please_provide_username">Please provide username</string>
    <string name="please_provide_email">Please provide email</string>
    <string name="please_provide_a_valid_email">Please provide a valid email</string>
    <string name="please_provide_password">Please provide password</string>
    <string name="password_does_not_match">Password does not match</string>

    <string name="please_check_your_internet_connection">Please check your internet connection!</string>
    <string name="failed_to_connect_to_the_server">Failed to connect to the server</string>


    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="language">Arabic</string>
    <string name="settings">Settings</string>


    <string name="MEDIFICATION_NOTIFICATION">MEDIFICATION NOTIFICATION</string>
    <string name="before_five_minutes">Before 5 minutes</string>
    <string name="before_fifteen_minutes">Before 15 minutes</string>
    <string name="before_thirty_minutes">Before 30 minutes</string>
    <string name="before_one_hour">Before 1 hour</string>

    <string name="fa_share">&#xf1e0;</string>
    <string name="fa_reports">&#xf0f6;</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <integer name="slide_animation_duration">500</integer>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="notification_title">MyMedicine</string>
    <string name="notification_message">This is the notification for your medicine</string>
</resources>
