<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_login_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250dp"
                android:background="@color/bg_login_banner">

                <ImageView
                    android:layout_width="@dimen/_200dp"
                    android:layout_height="@dimen/_200dp"
                    android:src="@drawable/app_icon_transparent"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="textCapSentences"
                    android:text=""
                    android:textSize="@dimen/fs_16"
                    android:textColor="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleDrawable="@drawable/toggle_password_visibility"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/password_visibility">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_password"
                    android:inputType="textPassword"
                    android:text=""
                    android:textSize="@dimen/fs_16"
                    android:textColor="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_login_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:text="@string/sign_in"
                android:layout_marginTop="@dimen/_10dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_login_forgot_password_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginTop="@dimen/_20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account"/>

                <TextView
                    android:id="@+id/tv_login_signup_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/text_color_link"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>
