<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/_10dp"
    android:elevation="@dimen/_30dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_medicine_adapter_med_image"
        android:layout_width="@dimen/_80dp"
        android:layout_height="@dimen/_80dp"
        android:src="@drawable/placeholder"
        android:tint="@color/bg_login_banner"
        android:layout_centerVertical="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/img_medicine_adapter_med_image"
        android:layout_marginLeft="@dimen/_10dp">

    <TextView
        android:id="@+id/tv_medicine_adapter_med_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/fs_16"
        android:text="@string/home"/>

        <TextView
            android:id="@+id/tv_medicine_adapter_med_per_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="@dimen/fs_14"
            android:text="@string/three_tablets_a_day"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_medicine_adapter_med_next_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:textSize="@dimen/fs_14"
            android:text="@string/dummy_time"
            android:drawableLeft="@drawable/ic_access_time_black_24dp"
            android:drawablePadding="@dimen/_5dp"/>

            <TextView
                android:id="@+id/tv_medicine_adapter_med_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/text_color"
                android:textSize="@dimen/fs_14"
                android:text="@string/dummy_time"
                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="@dimen/_5dp"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
