<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start">

    <LinearLayout
        android:id="@+id/rl_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_app_details"
        android:orientation="vertical">

        <include
            layout="@layout/nav_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!--Here you can give your custom layouts if required-->

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_residemmenu_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_10dp">

                <ImageView
                    android:layout_width="@dimen/_50dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_person" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.83"
                    android:paddingLeft="10dp"
                    android:text="@string/profile" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_residemmenu_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_10dp">

                <ImageView
                    android:layout_width="@dimen/_50dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_notification" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.83"
                    android:paddingLeft="10dp"
                    android:text="@string/notification" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_residemmenu_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_10dp">

                <ImageView
                    android:layout_width="@dimen/_50dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.83"
                    android:paddingLeft="10dp"
                    android:text="@string/logout" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_residemmenu_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_10dp">

                <ImageView
                    android:layout_width="@dimen/_50dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_language" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.83"
                    android:paddingLeft="10dp"
                    android:text="@string/language" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_app_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Developer"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="dot and bold"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>