<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="215dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="-15dp"
            >
            <ScrollView
                android:id="@+id/sv_left_menu"
                android:layout_width="215dp"
                android:layout_height="match_parent"
                android:paddingBottom="-15dp"
                android:scrollbars="none"
                android:background="@color/white">

        <LinearLayout
            android:id="@+id/layout_left_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/colorPrimary">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_30dp"
                    android:src="@drawable/app_icon_transparent"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:id="@+id/ll_residemmenu_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_50dp"
                        android:layout_height="@dimen/_50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_person"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.83"
                        android:paddingLeft="10dp"
                        android:text="@string/profile"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_residemmenu_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                    android:padding="@dimen/_10dp">

                <ImageView
                    android:layout_width="@dimen/_50dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_notification"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.83"
                    android:paddingLeft="10dp"
                    android:text="@string/notification"/>
            </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_residemmenu_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_50dp"
                        android:layout_height="@dimen/_50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_logout"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.83"
                        android:paddingLeft="10dp"
                        android:text="@string/logout"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_residemmenu_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_10dp">

                    <ImageView
                        android:layout_width="@dimen/_50dp"
                        android:layout_height="@dimen/_50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_language"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.83"
                        android:paddingLeft="10dp"
                        android:text="@string/language"/>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

            </ScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Developer\ndot n bold"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_50dp"/>

        </RelativeLayout>

    <ImageView
        android:id="@+id/iv_shadow"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:visibility="gone" />
</FrameLayout>